--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@ build/
 
 # Firebase admin credentials 
 firebase-adminsdk-*.json
+
+# OS-specific files
+.DS_Store
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
